--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,11 @@
 
 
     <EditText
-        android:id="@+id/editTextTime2"
+        android:id="@+id/editTextTime3"
         android:layout_width="215dp"
         android:layout_height="49dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="24:00"
         android:inputType="time"
@@ -19,8 +20,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.852"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
-        app:layout_constraintVertical_bias="0.14" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTime2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button2"
@@ -43,21 +44,22 @@
         android:layout_marginStart="164dp"
         android:layout_marginTop="47dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="DD/MM/YYYY"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/editTextTime2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <EditText
-        android:id="@+id/editTextTime3"
+        android:id="@+id/editTextTime2"
         android:layout_width="217dp"
         android:layout_height="53dp"
         android:layout_marginStart="167dp"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="27dp"
         android:layout_marginBottom="66dp"
         android:ems="10"
@@ -67,8 +69,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTime2"
-        app:layout_constraintVertical_bias="0.742" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
+        app:layout_constraintVertical_bias="0.45" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -76,8 +78,13 @@
         android:layout_height="49dp"
         android:layout_marginStart="176dp"
         android:layout_marginTop="76dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.48000002" />
 
     <TextView
         android:id="@+id/textView"
